Fixed spacing in collapsed navbar

--- a/static/css/light.css
+++ b/static/css/light.css
@@ -95,6 +95,9 @@ nav li {
 }
 
 @media (max-width: 991px) {
+	.navbar .navcontainer {
+		padding: 10px;
+	}
 	.navbar-collapse {
 		width: 100%
 	}
